# PythonLab

./: lab1.py  pyproject.toml
Lab10/: lab10.py  pyproject.toml
Lab2/: hamiltonian.py  lab2.py  pyproject.toml
Lab3/: lab3.py  pyproject.toml
Lab4/: lab4.py  pyproject.toml
Lab5/: lab5.py  pyproject.toml
Lab6/: hamiltonian.py  lab6.py  pyproject.toml
Lab7/: lab7.py  pyproject.toml
Lab8/: lab8.py  pyproject.toml
Lab9/: ReadMe
