[tool.poetry]
name = "lab6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numba = "^0.56.4"
numpy = "<1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
